Fix offers tag overlapping issue - Fix offers tag and version dropdown overlapping issue - Update dropdown css on amp page

--- a/BikeWale.UI/css/new/modelprice-in-city.css
+++ b/BikeWale.UI/css/new/modelprice-in-city.css
@@ -247,7 +247,7 @@
     position: fixed;
     top: 0;
     margin: 0 auto;
-    z-index: 3;
+    z-index: 5;
     border-bottom: 0;
     
 }
