--- a/BikeWale.UI/sass/m/dealer-pricequote.sass
+++ b/BikeWale.UI/sass/m/dealer-pricequote.sass
@@ -16,7 +16,7 @@ header
     left: 0
     right: 0
     top: 0
-    z-index: 3
+    z-index: 5
 
 .header-fixed
   padding: 7px 5px 10px 15px
