--- a/BikeWale.UI/sass/partials/version-dropdown.sass
+++ b/BikeWale.UI/sass/partials/version-dropdown.sass
@@ -42,7 +42,7 @@
 // price in city page
 .pic-version-dropdown-box
     .dropdown-box__submenu-list
-        top: 92%
+        top: 90%
         left: -5px
 
 // Desktop classes
